--- a/dapp/src/index.css
+++ b/dapp/src/index.css
@@ -7,3 +7,13 @@ body {
   /* background-color: #863efa; */
   position: relative;
 }
+
+ul li a{
+  padding: 8px 14px;
+  border-radius: 4px;
+}
+
+ul .active{
+  background-color: white;
+  color: #333;
+}
